# Real-Time-Object-Tracker

./: .gitignore  README.md  counter.py  frame_extract.py  main.py  people_walking.py  pyproject.toml
