[project]
name = "tracking"
version = "0.1.0"
description = "Detect and track objects in a stream"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "trackers>=2.0.0rc0",
    "torch",
    "rfdetr>=1.1.0",
    "opencv-python>=4.11.0.86",
    "opencv-contrib-python>=4.11.0.86",
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126"}
]
torchvision = [
    {index = "pytorch-cu126"}
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.pip]
torch-backend = "auto"
