[project]
name = "Real-Time-Object-Tracker"
version = "0.1.0"
description = "Detect and track objects in a stream"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.11.0.86",
    "opencv-contrib-python>=4.11.0.86",
    "supervision",
    "trackers[deepsort]",
    "rfdetr>=1.1.0",
    "ultralytics>=8.3.116",
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126"}
]
torchvision = [
    {index = "pytorch-cu126"}
]
trackers = { git = "https://github.com/roboflow/trackers.git" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.pip]
torch-backend = "auto"
